# Rewrite

./: .gitmodules  CMakeLists.txt  test.aig
src/: CMakeLists.txt  global.hpp  main.cpp
src/aig/: aig.cpp  aig.cu  aig.hpp  utils.cpp  utils.hpp
src/cmd/: cmd.cpp  cmd.hpp
src/dar/: cut.hpp  dar.cpp  dar.hpp
src/lut/: LUT.cpp  LUT.hpp  LUT.lib
src/utils/: utils.cpp  utils.hpp
